@@ -2,17 +2,17 @@
 Hash: SHA1
 
 AUX 50notmuch-gentoo.el 291 RMD160 7e036b8700f50cde6c3b27622193ddf08812229b SHA1 cc087fe76f750e84171a6ddef9dc10139b8450cc SHA256 68c0ecfd3d10246fb65ec48b097c1b477ce33f44014f602f903c16b752ba7d3b
-EBUILD notmuch-9999.ebuild 3308 RMD160 6ce88e3c81cb85400f757435187d69d9e7074951 SHA1 d40d26a83b55e263e53d6d9a56e318d3e4208d8f SHA256 58b36c62d9170c9d88d77d08221247249af304a418e395a98b368d867b3a7829
-MISC ChangeLog 573 RMD160 4045ef4d9eb2b8caf94eb3e37c9d29b2e31e2c05 SHA1 bde8473174439847f1b6d93eecd25cd4fe419e93 SHA256 512f60031da146e68b3d05bfdb23d4d55c0fb445fe5bc18c116477b704e5f0be
+EBUILD notmuch-9999.ebuild 3215 RMD160 23325f8d3fa07e21e7100d95cf46e762fe1f8aaa SHA1 e832965ac306f2fc7b9698739906ab95203a7923 SHA256 d2cdc05697c6439d581bc7798324180a15c60c02490b35efb5c21ee93ac6384b
+MISC ChangeLog 732 RMD160 ecc5734d092a8a06914377ae53a4319f251ac2df SHA1 4d7061db9a35d13ca7b969051789a212b3ab8af1 SHA256 0fce868671a99fd314dad86408228c855cc9331eb121325bec41729ee000ccb7
 MISC metadata.xml 870 RMD160 1ea6d669111c3e30f719c2337bb1fbebe7ab14aa SHA1 49ddae312621716998b7fe205f93536b2c2d20b4 SHA256 37955cc892c0585089e4dfb7ea2a8d1cb819164c4d098ba1be7253929be9890f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBAgAGBQJOz3FEAAoJEPATRTHh2/q19Q8H/1PrnLW93sgy2ws9eQpirFle
-Ez/hDPZVKJeNMqY4NKMR/cPJL0xI4YQTbqRuGbLyK5cu0S+BkNjw8f1X38TpAvaw
-oJCoo8RlSrfqAjD1V1nT5/hA7KXJlbNdvjI1xPxElJOY/bVkcLVURFClzbVUa6+f
-S6l6/XS/4CwJYJVW605RBFoZWBpe6qwfCI9d91hPjG7FKf5QL9mQeTj75IZP/IO0
-up6irMbGQKY0jqgdGQGCp9u5cPIBA9wjAoxPiqLx9kwd4TFJJf9Px19md73gJ0gS
-Gk1aEs7h9XN8RXUy0/N60RYeEHrrsDZwrBhMvrmX5LaTYyHTemcfK3YgwWaVSw0=
-=WOgU
+iQEcBAEBAgAGBQJPHve6AAoJEPATRTHh2/q1U7UH/1ji3pEUJ5PYEL6BAZ1ZRsks
+2RxhkrFalIditvk8RyHYWqvLFntV4hX6riYk8sBO7b9MpfUdDSDJnueXacBW3c9k
+CySTC8shmCj+kuApTxfCcaMJ7tb+aAW7uRA62tLJaMRI7My76V3VpblPhWyzHvPI
+387lRjVC4jnf1D3KLc4TfmwtN/AgoIrOTTLb3JeJxXDB7Kw9gt+7fYgRYyfqZNZ3
+9og2SSScpuzYbhQ/5FsFLjH2+0XWwl7495VnQtf6OR/nZbXIQw2kaMb5pgx1Jyvs
+HHqoZ69ntwytqj1WgQN/B50GtF9Ha4PApwUsVLRRDagXAdBWWg1oggdS+wC7gAs=
+=AhGA
 -----END PGP SIGNATURE-----
