@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/notmuch
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  24 Jan 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
+  Dropped autotools-utils. Using EAPI4 defaults. Builds with current HEAD, now.
 
   25 Nov 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
   Corrected postinst message.
